08_Networking/26-04_Test_Ingress/hello01-ing.yaml
# Exercise 19-04
#
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello01-ing
spec:
  ingressClassName: nginx
  rules:
    - host: hello-world.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello01-svc 
                port:
                  number: 8080
